2008-04-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: Improve anonymous authentication to not
	remove rosters accidentally (EJAB-549). New functions in
	ejabberd_auth to get/check password and know which module accepted
	the authentication. New element 'auth_module' in ejabberd_c2s
	record 'statedata'. Cyrsasl provides a new property in the
	response: {auth_module, AuthModule}.
	* src/ejabberd_auth_anonymous.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise
	* src/cyrsasl_anonymous.erl: Likewise
	* src/cyrsasl_digest.erl: Likewise
	* src/cyrsasl_plain.erl: Likewise

2008-04-18  Badlop  <badlop@process-one.net>

	* src/ejabberd_s2s_out.erl: Fix long timeout when reconnecting s2s
	after a remote server crash (EJAB-540)
	* src/ejabberd_s2s_in.erl: Likewise
	* src/ejabberd_s2s.erl: Likewise
	* doc/guide.tex: Likewise

2008-04-16  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Clarification: PEP is enabled in default config

2008-04-14  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_caps.erl: Cache negative response (EJAB-474)

2008-04-11  Alexey Shchepin  <alexey@process-one.net>

	* src/tls/tls_drv.c: Fixed gcc signedness warnings (EJAB-447)
	* src/ejabberd_zlib/ejabberd_zlib_drv.c: Likewise

	* src/expat_erl.c: Removed R9B workaround (EJAB-447)

2008-04-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix identity and database update
	bugfix
	* src/mod_pubsub/nodetree_default.erl: Likewise

2008-04-10  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Uniform default value for empty privacy
	list. Fixes (EJAB-603).

2008-04-08  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth_ldap.erl: LDAP function to get the number of
	registered users is too slow (EJAB-331): set timeout in LDAP
	search queries (thanks to Evgeniy Khramtsov) and return the number
	of registered users.

2008-04-07  Mickael Remond  <mremond@process-one.net>
